--- a/src/app/ui/components/product/product-grid/product-grid.component.html
+++ b/src/app/ui/components/product/product-grid/product-grid.component.html
@@ -8,8 +8,17 @@
       </svg>
     </button>
     
-    <!-- Spinner -->
-    <app-spinner [spinnerType]="'s2'" *ngIf="loading"></app-spinner>
+    <!-- Geliştirilmiş Loading Container -->
+    <div *ngIf="loading" class="loading-container">
+      <!-- SquareLoader Spinner -->
+      <app-spinner [spinnerType]="'s2'" [showOverlay]="false"></app-spinner>
+      
+      <!-- Progress Bar -->
+      <div class="loading-progress">
+        <div class="progress-bar" [style.width.%]="loadingProgress"></div>
+      </div>
+      <div class="loading-text">{{loadingText || 'Loading products...'}}</div>
+    </div>
     
     <div class="product-grid">
       <div class="product-list" #productGrid [class.invisible]="loading">
